crates/rustyray-macros/tests/ui/fail/method_without_self.stderr
error: Actor methods must have &self or &mut self parameter. Use constructor pattern (returns Self) for static methods.
  --> tests/ui/fail/method_without_self.rs:15:9
   |
15 |     pub fn add(x: i32, y: i32) -> i32 {
   |         ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

error[E0433]: failed to resolve: use of unresolved module or unlinked crate `serde`
 --> tests/ui/fail/method_without_self.rs:3:1
  |
3 | #[rustyray::actor]
  | ^^^^^^^^^^^^^^^^^^ use of unresolved module or unlinked crate `serde`
  |
  = note: this error originates in the attribute macro `rustyray::actor` (in Nightly builds, run with -Z macro-backtrace for more info)

warning: unused import: `rustyray::prelude::*`
 --> tests/ui/fail/method_without_self.rs:1:5
  |
1 | use rustyray::prelude::*;
  |     ^^^^^^^^^^^^^^^^^^^^
  |
  = note: `#[warn(unused_imports)]` on by default
